--- a/package.json
+++ b/package.json
@@ -49,5 +49,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "https://quiet-spire-34698.herokuapp.com"
 }
